# A1-repro

./: .gitignore  .gitmodules  README.md  pyproject.toml
a1/: __init__.py  cli.py  config.py
a1/chain/: __init__.py  abi.py  explorer.py  rpc.py
a1/controller/: __init__.py  loop.py  parser.py  policy.py  prompt.py
a1/datasets/: models.yaml  targets_custom.yaml  targets_defihacklabs.yaml  targets_verite.yaml
a1/experiments/: __init__.py  metrics.py  results_store.py  run_batch.py  run_one.py
a1/llm/: __init__.py  anthropic.py  client.py  openai.py  openrouter.py  schema.py
a1/tools/: __init__.py  base.py  cache.py  code_sanitizer.py  concrete_execution.py  constructor_extractor.py  dex_aggregator.py  profit_oracle.py  proxy_resolver.py  revenue_normalizer.py  source_code.py  state_reader.py
harness/: foundry.toml
harness/src/: DexRegistry.sol  DexUtils.sol  StrategyHarness.sol
harness/src/interfaces/: IERC20.sol  IUniswapV2Factory.sol  IUniswapV2Pair.sol  IUniswapV2Router.sol
harness/test/: Harness.t.sol
