[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "a1-repro"
version = "0.1.0"
description = "LLM + Tools + Execution Feedback for autonomous PoC generation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.25.0",
    "web3>=6.0.0",
    "openai>=1.0.0",
    "anthropic>=0.20.0",
    "aiosqlite>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
a1 = "a1.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["a1"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
